--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 
       <header>
         <div>
-          
+          <a href="index.html">
+          <img src="logo.png" alt="Logo Univalle">
+          </a>          
         </div>
       </header>      
 
       <!-- Título -->
-      <div>
+      <div class="titulo">
         <h1>
           ESTRUCLAB
         </h1>
