--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
           <div class="titulos-modulos">
             <h3>Dinámica estructural e ingeniería sísmica</h3>
           </div>
-          <div class="imagen-modulo">                            
+          <div class="imagen-modulo">
+            <!-- Tamaño de imagen: 400x400 px, formato .png -->
             <div>
               <a href="modulo-dinamica.html">
                 <img src="modulo-dinamica.png" alt="Dinámica estructural e ingeniería sísmica">
