--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -30,17 +30,43 @@
         </h2>
       </div>
 
-      <div class="fondo-azul">
+      <div class="contenedor-ppal">
+        <div>
+          <h4>Resistencia del concreto a compresión</h4>
+        </div>
         <div class="contenedor-ensayos">
-          <div class="ensayos">
-            <h4>Resistencia del concreto a compresión</h4>
+          <div class="imagen-ensayo"> 
+            <a href="concreto-compresion.html">
+              <img src="concreto-compresion.png" alt="Cilindro de concreto sometido a compresion">
+            </a>          
 
           </div>
+          <div class="descripcion-ensayo">
+            <p>
+              El objetivo de este ensayo es obtener la resistencia
+              a compresión de un espécimen cilíndrico
+              de concreto de 150 mm de diámetro y 300
+              mm de altura. Esta prueba se lleva a cabo en el
+              ámbito constructivo para estimar la calidad de
+              los concretos usados en obra, la cual depende
+              del proceso de fabricación, calidad de los agregados,
+              relación agua/cemento y curado. En este
+              laboratorio virtual se seguirá el estándar de la
+              ASTM C39 y la NTC 673
+            </p>
+          </div>          
+        </div>
 
-          <div class="ensayos">
-            <h4>Resistencia del concreto a flexión</h4>
-          </div>
-        </div>                               
+        <div>
+          <h4>Resistencia del concreto a flexión</h4>
+        </div>
+        <div class="contenedor-ensayos">
+          <div class="imagen-ensayo">            
+
+          </div>          
+        </div>
+        
+        
       </div>      
 
     </main>
