--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -87,6 +87,31 @@
 
     </main>
 
+    <footer>
+      <div class="footer">
+        <div>
+          <a href="https://www.univalle.edu.co/" target="_blank">
+            <img src="logoUV_Oficial_Rojo.jpg" alt="Pagina web de la Universidad del Valle" style="width: 75px;">
+          </a>
+        </div>
+        <div>
+          <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/risk" target="_blank">
+            <img src="risk.png" alt="Pagina web del grupo de investigacion RISK" style="width: 280px;">
+          </a>
+        </div>
+        <div>
+          <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/g7" target="_blank">
+            <img src="logo_g7.bmp" alt="Pagina web del grupo de investigacion G7" style="width: 75px;">
+          </a>
+        </div>
+        <div>
+          <a href="hhttps://www.renata.edu.co/" target="_blank">
+            <img src="renata.PNG" alt="Pagina web de red nacional academica de tecnologia avanzada" style="width: 280px;">
+          </a>          
+        </div>
+      </div>
+    </footer>
+
   </body>
 
 </html>
