--- a/index.html
+++ b/index.html
@@ -3,34 +3,23 @@
 
   <head>  
      
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style2.css" >
 
   </head>
 
   <body>
 
-    <main>
-
-      <header>
-        <div class="logo">
-          <a href="index.html">
-          <img src="logo.png" alt="Logo Univalle" style="height: 80px;">
-          </a>          
-        </div>
-      </header>      
-
-      <!-- Título -->
-      <div class="titulo">
-        <h1>
-          ESTRUCLAB
-        </h1>
-
-        <h2>
-          Laboratorios Virtuales
-        </h2>
+    <header>
+      <div>
+        <a href="index.html">
+        <img src="/imagenes/logo.png" alt="EstrucLab Laboratorios Virtuales">
+        </a>          
       </div>
+    </header> 
 
-      <div class="fondo-azul">        
+    <main>          
+
+      <div class="fondo-modulos">       
 
         <div class="modulos">
           <div class="titulos-modulos">
@@ -66,7 +55,7 @@
           <div class="imagen-modulo">
             <div style="text-align:center; justify-content: space-around;">
               <a href="modulo-mecanica.html">
-                <img src="modulo-mecanica.png" alt="Mecánica de sólidos">
+                <img src="modulo-mecanica.jpg" alt="Mecánica de sólidos">
               </a>
             </div>
           </div>
@@ -74,28 +63,40 @@
       </div>
     </main>
 
+    <div style="font-size: 20px; text-align:center; margin-top: 20px;">Un proyecto de:</div>
+
     <footer>
       <div class="footer">
         <div>
-          <a href="https://www.univalle.edu.co/" target="_blank">
-            <img src="logoUV_Oficial_Rojo.jpg" alt="Pagina web de la Universidad del Valle" style="width: 75px;">
+          <a href="https://www.univalle.edu.co/" target="_blank" rel="noopener noreferrer">
+            <img src="univalle.png" alt="Pagina web de la Universidad del Valle" style="width: 75px;">
           </a>
         </div>
         <div>
-          <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/risk" target="_blank">
-            <img src="risk.png" alt="Pagina web del grupo de investigacion RISK" style="width: 280px;">
+          <a href="https://www.javerianacali.edu.co/" target="_blank" rel="noopener noreferrer">
+            <img src="javeriana-logo.png" alt="Pagina web Universidad Javeriana" style="width: 100px; background-color: rgb(16, 48, 98);">
           </a>
         </div>
         <div>
-          <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/g7" target="_blank">
-            <img src="logo_g7.bmp" alt="Pagina web del grupo de investigacion G7" style="width: 75px;">
+          <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/risk" target="_blank" rel="noopener noreferrer">
+            <img src="risk.png" alt="Pagina web del grupo de investigacion RISK" style="width: 250px;">
           </a>
         </div>
         <div>
-          <a href="hhttps://www.renata.edu.co/" target="_blank">
-            <img src="renata.PNG" alt="Pagina web de red nacional academica de tecnologia avanzada" style="width: 280px;">
-          </a>          
+          <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/g7" target="_blank" rel="noopener noreferrer">
+            <img src="g7.PNG" alt="Pagina web del grupo de investigacion G7" style="width: 250px;">
+          </a>
         </div>
+        <div>
+          <a href="http://cidesco.org.co/" target="_blank" rel="noopener noreferrer">
+            <img src="cidesco.png" alt="Logo Cidesco" style="width: 250px;">
+          </a>
+        </div>
+        <!--<div>
+           <a href="hhttps://www.renata.edu.co/" target="_blank" rel="noopener noreferrer">
+            <img src="renata.PNG" alt="Pagina web de red nacional academica de tecnologia avanzada" style="width: 250px;">
+          </a>           
+        </div>-->
       </div>
     </footer>
 
