--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div>
         <a href="index.html">
-        <img src="/imagenes/logo.png" alt="EstrucLab Laboratorios Virtuales">
+        <img src="./imagenes/logo.png" alt="EstrucLab Laboratorios Virtuales">
         </a>          
       </div>
     </header> 
@@ -29,7 +29,7 @@
             <!-- Tamaño de imagen: 400x400 px, formato .png -->
             <div style="text-align:center; justify-content: space-around;">
               <a href="modulo-dinamica.html">
-                <img src="modulo-dinamica.png" alt="Dinámica estructural e ingeniería sísmica" >
+                <img src="./imagenes/modulo-dinamica.png" alt="Dinámica estructural e ingeniería sísmica" >
               </a>
             </div>
           </div>
@@ -42,7 +42,7 @@
           <div class="imagen-modulo">
             <div style="text-align:center; justify-content: space-around;">
               <a href="modulo-concreto.html">
-                <img src="modulo-concreto.png" alt="Concreto">
+                <img src="./imagenes/modulo-concreto.png" alt="Concreto">
               </a>
             </div>
           </div>
@@ -55,7 +55,7 @@
           <div class="imagen-modulo">
             <div style="text-align:center; justify-content: space-around;">
               <a href="modulo-mecanica.html">
-                <img src="modulo-mecanica.jpg" alt="Mecánica de sólidos">
+                <img src="./imagenes/modulo-mecanica.jpg" alt="Mecánica de sólidos">
               </a>
             </div>
           </div>
@@ -69,32 +69,32 @@
       <div class="footer">
         <div>
           <a href="https://www.univalle.edu.co/" target="_blank" rel="noopener noreferrer">
-            <img src="univalle.png" alt="Pagina web de la Universidad del Valle" style="width: 75px;">
+            <img src="./imagenes/univalle.png" alt="Pagina web de la Universidad del Valle" style="width: 75px;">
           </a>
         </div>
         <div>
           <a href="https://www.javerianacali.edu.co/" target="_blank" rel="noopener noreferrer">
-            <img src="javeriana-logo.png" alt="Pagina web Universidad Javeriana" style="width: 100px; background-color: rgb(16, 48, 98);">
+            <img src="./imagenes/javeriana-logo.png" alt="Pagina web Universidad Javeriana" style="width: 100px; background-color: rgb(16, 48, 98);">
           </a>
         </div>
         <div>
           <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/risk" target="_blank" rel="noopener noreferrer">
-            <img src="risk.png" alt="Pagina web del grupo de investigacion RISK" style="width: 250px;">
+            <img src="./imagenes/risk.png" alt="Pagina web del grupo de investigacion RISK" style="width: 250px;">
           </a>
         </div>
         <div>
           <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/g7" target="_blank" rel="noopener noreferrer">
-            <img src="g7.PNG" alt="Pagina web del grupo de investigacion G7" style="width: 250px;">
+            <img src="./imagenes/g7.PNG" alt="Pagina web del grupo de investigacion G7" style="width: 250px;">
           </a>
         </div>
         <div>
           <a href="http://cidesco.org.co/" target="_blank" rel="noopener noreferrer">
-            <img src="cidesco.png" alt="Logo Cidesco" style="width: 250px;">
+            <img src="./imagenes/cidesco.png" alt="Logo Cidesco" style="width: 250px;">
           </a>
         </div>
         <!--<div>
            <a href="hhttps://www.renata.edu.co/" target="_blank" rel="noopener noreferrer">
-            <img src="renata.PNG" alt="Pagina web de red nacional academica de tecnologia avanzada" style="width: 250px;">
+            <img src="./imagenes/renata.PNG" alt="Pagina web de red nacional academica de tecnologia avanzada" style="width: 250px;">
           </a>           
         </div>-->
       </div>
