--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -3,32 +3,29 @@
 
   <head>  
      
-    <link href="style.css" rel="stylesheet">
+    <link href="style2.css" rel="stylesheet">
 
   </head>
 
   <body>
 
+    <header>
+      <div>
+        <a href="index.html">
+        <img src="./imagenes/logo.png" alt="EstrucLab Laboratorios Virtuales">
+        </a>          
+      </div>
+    </header> 
+
     <main>
 
-      <header>
-        <div class="logo">
-          <a href="index.html">
-          <img src="logo.png" alt="Logo Univalle" style="height: 80px;">
-          </a>          
-        </div>
-      </header>      
+           
 
       <!-- Título -->
       <div class="titulo">
         <h1>
           CONCRETO
-        </h1>
-
-        <h2>
-          Laboratorios Virtuales
-        </h2>
-      </div>
+        </h1>        
 
       <div class="contenedor-ppal">
         <div style="text-align: center;">
@@ -36,7 +33,7 @@
         </div>
         <div class="contenedor-ensayos">
           <div class="imagen-ensayo">            
-              <img src="concreto-compresion.jpg" alt="Cilindro de concreto sometido a compresion">
+              <img src="./imagenes/concreto-compresion.jpg" alt="Cilindro de concreto sometido a compresion">
           </div>
 
           <div class="descripcion-ensayo">
@@ -72,7 +69,7 @@
         </div>
         <div class="contenedor-ensayos">
           <div class="imagen-ensayo"> 
-            <img src="concreto-flexion.jpg" alt="Viga de concreto sometida a flexion">           
+            <img src="./imagenes/concreto-flexion.jpg" alt="Viga de concreto sometida a flexion">           
 
           </div> 
           <div class="descripcion-ensayo">
@@ -87,28 +84,39 @@
 
     </main>
 
+    <div style="font-size: 20px; text-align:center; margin-top: 20px;">Un proyecto de:</div>
     <footer>
       <div class="footer">
         <div>
-          <a href="https://www.univalle.edu.co/" target="_blank">
-            <img src="logoUV_Oficial_Rojo.jpg" alt="Pagina web de la Universidad del Valle" style="width: 75px;">
+          <a href="https://www.univalle.edu.co/" target="_blank" rel="noopener noreferrer">
+            <img src="./imagenes/univalle.png" alt="Pagina web de la Universidad del Valle" style="width: 75px;">
           </a>
         </div>
         <div>
-          <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/risk" target="_blank">
-            <img src="risk.png" alt="Pagina web del grupo de investigacion RISK" style="width: 280px;">
+          <a href="https://www.javerianacali.edu.co/" target="_blank" rel="noopener noreferrer">
+            <img src="./imagenes/javeriana-logo.png" alt="Pagina web Universidad Javeriana" style="width: 100px; background-color: rgb(16, 48, 98);">
           </a>
         </div>
         <div>
-          <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/g7" target="_blank">
-            <img src="logo_g7.bmp" alt="Pagina web del grupo de investigacion G7" style="width: 75px;">
+          <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/risk" target="_blank" rel="noopener noreferrer">
+            <img src="./imagenes/risk.png" alt="Pagina web del grupo de investigacion RISK" style="width: 250px;">
           </a>
         </div>
         <div>
-          <a href="hhttps://www.renata.edu.co/" target="_blank">
-            <img src="renata.PNG" alt="Pagina web de red nacional academica de tecnologia avanzada" style="width: 280px;">
-          </a>          
+          <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/g7" target="_blank" rel="noopener noreferrer">
+            <img src="./imagenes/g7.PNG" alt="Pagina web del grupo de investigacion G7" style="width: 250px;">
+          </a>
         </div>
+        <div>
+          <a href="http://cidesco.org.co/" target="_blank" rel="noopener noreferrer">
+            <img src="./imagenes/cidesco.png" alt="Logo Cidesco" style="width: 250px;">
+          </a>
+        </div>
+        <!--<div>
+           <a href="hhttps://www.renata.edu.co/" target="_blank" rel="noopener noreferrer">
+            <img src="./imagenes/renata.PNG" alt="Pagina web de red nacional academica de tecnologia avanzada" style="width: 250px;">
+          </a>           
+        </div>-->
       </div>
     </footer>
 
