--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
   <head>  
-     
+    <link rel="icon" href="./imagenes/computer-icon-small.png"> 
     <link href="style2.css" rel="stylesheet">
 
   </head>
@@ -12,7 +12,7 @@
     <header>
       <div>
         <a href="index.html">
-        <img src="./imagenes/logo.png" alt="EstrucLab Laboratorios Virtuales">
+        <img src="./imagenes/estruclab.PNG" alt="EstrucLab Laboratorios Virtuales" style="width: 512px;">
         </a>          
       </div>
     </header> 
@@ -84,7 +84,7 @@
 
     </main>
 
-    <div style="font-size: 20px; text-align:center; margin-top: 20px;">Un proyecto de:</div>
+    <div style="font-size: 20px; text-align:center; margin-top: 20px;">Con el apoyo de:</div>
     <footer>
       <div class="footer">
         <div>
