--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 
-  <head>  
-     
-    <link rel="stylesheet" href="style2.css" >
+  <head> 
+    
+    <link rel="icon" href="./imagenes/computer-icon-small.png">
+    <link rel="stylesheet" href="style2.css">
 
   </head>
 
@@ -12,7 +13,7 @@
     <header>
       <div>
         <a href="index.html">
-        <img src="./imagenes/logo.png" alt="EstrucLab Laboratorios Virtuales">
+        <img src="./imagenes/estruclab.PNG" alt="EstrucLab Laboratorios Virtuales" style="width: 512px;">
         </a>          
       </div>
     </header> 
@@ -63,7 +64,7 @@
       </div>
     </main>
 
-    <div style="font-size: 20px; text-align:center; margin-top: 20px;">Un proyecto de:</div>
+    <div style="font-size: 20px; text-align:center; margin-top: 20px;">Con el apoyo de:</div>
 
     <footer>
       <div class="footer">
