--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html lang="es">
 
   <head> 
-    
+    <meta charset="utf-8">
     <link rel="icon" href="./imagenes/computer-icon-small.png">
     <link rel="stylesheet" href="style2.css">
-
+    <title>EstrucLab Laboratorios Virtuales</title>
+    <link rel="shortcut icon" href="./imagenes/favicon.PNG" type="image/x-icon">
+    <meta name="author" content="Universidad del Valle Grupo de Investigación RISK">
+    <meta name="description" content="El aprendizaje en línea y la enseñanza virtual están emergiendo como nuevas vías para la
+    educación en ingeniería y han acelerado la difusión de recursos educativos a nivelmundial
+    . En particular, se ha demostrado que los enfoques de educación a distancia y aprendizaje en línea son más efectivos en los países en desarrollo con recursos limitados y mayor
+    número de estudiantes. Es por esto que la virtualización de la componente práctica de
+    los cursos de ingeniería estructural está directamente relacionada con articular diferentes funciones de docencia, investigación y servicio
+    que respondan a las necesidades presentes y futuras de la región. El desarrollo de este
+    proyecto incentivará la creación y virtualización de las prácticas de laboratorio en los cursos
+    de las diferentes escuelas de la facultad de ingeniería de la Universidad del Valle (UV) y
+    de la Pontificia Universidad Javeriana - sede Cali (PUJ). Actualmente uno de los retos de la enseñanza a los estudiantes de los cursos de los programas
+    académicos de pregrado y postgrado de ingeniería civil de la UV y la PUJ, es brindarles
+    una comprensión intuitiva de los temas con la ayuda de una componente práctica
+    de laboratorio que permita el acercamiento de los estudiantes al comportamiento real de
+    las estructuras. Algunos de los cursos del área de estructuras son: Estática, Resistencia de
+    materiales, Dinámica estructural, Control estructural, Ingeniería sísmica, Diseño sismo resistente,
+    Análisis matricial de estructuras, Diseño de elementos de hormigón, Diseño de
+    estructuras de hormigón, Diseño de estructuras metálicas, Introducción al diseño sismo
+    resistente, entre otros. La mejor forma para la construcción de conocimiento, el desarrollo
+    del pensamiento crítico y el abordaje de la solución de problemas por parte de los estudiantes
+    y para la realización de proyectos de investigación en niveles más avanzados de los
+    cursos de pregrado y postgrado es impartiendo teoría acompañada de desarrollos experimentales
+    que les permitan a los estudiantes entender de manera práctica los conocimientos
+    adquiridos.">
   </head>
 
   <body>
@@ -97,7 +121,8 @@
            <a href="hhttps://www.renata.edu.co/" target="_blank" rel="noopener noreferrer">
             <img src="./imagenes/renata.PNG" alt="Pagina web de red nacional academica de tecnologia avanzada" style="width: 250px;">
           </a>           
-        </div>-->
+        </div>-->                     
+
       </div>
     </footer>
 
