--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -40,8 +40,8 @@
 			<div class="position-fixed w-100 p-3 border-bottom" style="z-index: 100000;background-color: #ffffff;">
 				<div class="row">
 					<div class="col-md-3">
-						<a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-							<img src="logo.png" style="height: 30px;">
+						<a href="modulo-concreto.html" class="d-flex align-items-center text-dark text-decoration-none">
+							<img src="./imagenes/favicon.PNG" style="height: 30px;">
 							<span class="fs-8">LABORATORIOS VIRTUALES</span>
 						</a>
 					</div>
@@ -50,7 +50,7 @@
 					<div class="col-md-9" style="display: flex;	flex-direction: row; justify-content: space-around;">						
 						<label style="text-align:center;">Resistencia del concreto a compresión</label>						
 						<div>						
-							<a  class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank" href="manual_concreto_compresion.pdf">Manual</a>
+							<a  class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank" href="manual-concreto-compresion.pdf">Manual</a>
 						</div>
 					</div>
 				</div>
