--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
   <head>  
+    <meta charset="utf-8">
     <link rel="icon" href="./imagenes/computer-icon-small.png"> 
     <link href="style2.css" rel="stylesheet">
 
