--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="shortcut icon" href="./imagenes/favicon.PNG" type="image/x-icon">
     <meta name="author" content="Universidad del Valle Grupo de Investigación RISK">
     <meta name="description" content="El aprendizaje en línea y la enseñanza virtual están emergiendo como nuevas vías para la
-    educación en ingeniería y han acelerado la difusión de recursos educativos a nivelmundial
-    . En particular, se ha demostrado que los enfoques de educación a distancia y aprendizaje en línea son más efectivos en los países en desarrollo con recursos limitados y mayor
+    educación en ingeniería y han acelerado la difusión de recursos educativos a nivel mundial. En particular, se ha demostrado que los enfoques de educación a distancia y aprendizaje en línea son más efectivos en los países en desarrollo con recursos limitados y mayor
     número de estudiantes. Es por esto que la virtualización de la componente práctica de
     los cursos de ingeniería estructural está directamente relacionada con articular diferentes funciones de docencia, investigación y servicio
     que respondan a las necesidades presentes y futuras de la región. El desarrollo de este
