--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -4,7 +4,9 @@
 <head>
 
 	<meta charset="utf-8">
-
+	<link rel="icon" href="./imagenes/computer-icon-small.png"> 
+	<link rel="shortcut icon" href="./imagenes/favicon.PNG" type="image/x-icon">
+  <meta name="author" content="Universidad del Valle Grupo de Investigación RISK">
 	<title>Resistencia del concreto a compresión</title>	
 	
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
