--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
           <div class="titulos-modulos">
             <h3>Dinámica estructural e ingeniería sísmica</h3>
           </div>
-          <div class="imagen-modulo">
-            <!-- Tamaño de imagen: 400x400 px, formato .png -->
+          <div class="imagen-modulo">            
             <div style="text-align:center; justify-content: space-around;">
               <a href="modulo-dinamica.html">
                 <img src="./imagenes/modulo-dinamica.png" alt="Dinámica estructural e ingeniería sísmica" >
@@ -87,33 +86,33 @@
       </div>
     </main>
 
-    <div style="font-size: 20px; text-align:center; margin-top: 20px;">Con el apoyo de:</div>
+    <div style="font-size: 20px; text-align:center; margin-top: 20px;">Un proyecto de:</div>
 
     <footer>
       <div class="footer">
         <div>
           <a href="https://www.univalle.edu.co/" target="_blank" rel="noopener noreferrer">
-            <img src="./imagenes/univalle.png" alt="Pagina web de la Universidad del Valle" style="width: 75px;">
+            <img src="./imagenes/univalle.png" alt="Pagina web de la Universidad del Valle">
           </a>
         </div>
         <div>
           <a href="https://www.javerianacali.edu.co/" target="_blank" rel="noopener noreferrer">
-            <img src="./imagenes/javeriana-logo.png" alt="Pagina web Universidad Javeriana" style="width: 100px; background-color: rgb(16, 48, 98);">
+            <img src="./imagenes/javeriana-logo.png" alt="Pagina web Universidad Javeriana" style="background-color: rgb(16, 48, 98);">
           </a>
         </div>
         <div>
           <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/risk" target="_blank" rel="noopener noreferrer">
-            <img src="./imagenes/risk.png" alt="Pagina web del grupo de investigacion RISK" style="width: 250px;">
+            <img src="./imagenes/risk.png" alt="Pagina web del grupo de investigacion RISK">
           </a>
         </div>
         <div>
           <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/g7" target="_blank" rel="noopener noreferrer">
-            <img src="./imagenes/g7.PNG" alt="Pagina web del grupo de investigacion G7" style="width: 250px;">
+            <img src="./imagenes/g7.PNG" alt="Pagina web del grupo de investigacion G7">
           </a>
         </div>
         <div>
           <a href="http://cidesco.org.co/" target="_blank" rel="noopener noreferrer">
-            <img src="./imagenes/cidesco.png" alt="Logo Cidesco" style="width: 250px;">
+            <img src="./imagenes/cidesco.png" alt="Logo Cidesco">
           </a>
         </div>
         <!--<div>
