--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -3,7 +3,9 @@
 
   <head>  
     <meta charset="utf-8">
-    <link rel="icon" href="./imagenes/computer-icon-small.png"> 
+    <link rel="icon" href="./imagenes/computer-icon-small.png">
+    <link rel="shortcut icon" href="./imagenes/favicon.PNG" type="image/x-icon">
+    <meta name="author" content="Universidad del Valle Grupo de Investigación RISK"> 
     <link href="style2.css" rel="stylesheet">
 
   </head>
@@ -13,7 +15,7 @@
     <header>
       <div>
         <a href="index.html">
-        <img src="./imagenes/estruclab.PNG" alt="EstrucLab Laboratorios Virtuales" style="width: 512px;">
+          <img src="./imagenes/estruclab.PNG" alt="EstrucLab Laboratorios Virtuales" style="width: 512px;">
         </a>          
       </div>
     </header> 
@@ -53,15 +55,17 @@
 
             <div class="contenedor-botones">
               <div>
-                <button class="boton-ensayo">Ir al ensayo</button>
+                <a href="concreto-compresion.html">
+                  <button class="boton-ensayo" >Ir al ensayo</button>
+                </a>                
               </div>
 
               <div>
-                <button class="boton-manual">Descargar manual (.pdf)</button>
+                <a href="manual-concreto-compresion.pdf" target="_blank" rel="noopener noreferrer">
+                  <button class="boton-manual">Descargar manual (.pdf)</button>
+                </a>
               </div>
-            </div>         
-
-
+            </div> 
           </div>          
         </div>
 
@@ -77,6 +81,19 @@
             <p>
               La resistencia a la flexión es una medida de la resistencia a la tracción del concreto (hormigón). Es una medida de la resistencia a la falla por momento de una viga o losa de concreto no reforzada.
             </p>
+
+          <div class="contenedor-botones">
+            <div>
+              <a href="concreto-flexion.html">
+                <button class="boton-ensayo" >Ir al ensayo</button>
+              </a>                
+            </div>
+            <div>
+              <a href="manual-concreto-flexion.pdf" target="_blank" rel="noopener noreferrer">
+                <button class="boton-manual">Descargar manual (.pdf)</button>
+              </a>
+            </div>
+          </div>        
           
         </div>
         
@@ -85,32 +102,32 @@
 
     </main>
 
-    <div style="font-size: 20px; text-align:center; margin-top: 20px;">Con el apoyo de:</div>
+    <div style="font-size: 20px; text-align:center; margin-top: 20px;">Un proyecto de:</div>
     <footer>
       <div class="footer">
         <div>
           <a href="https://www.univalle.edu.co/" target="_blank" rel="noopener noreferrer">
-            <img src="./imagenes/univalle.png" alt="Pagina web de la Universidad del Valle" style="width: 75px;">
+            <img src="./imagenes/univalle.png" alt="Pagina web de la Universidad del Valle">
           </a>
         </div>
         <div>
           <a href="https://www.javerianacali.edu.co/" target="_blank" rel="noopener noreferrer">
-            <img src="./imagenes/javeriana-logo.png" alt="Pagina web Universidad Javeriana" style="width: 100px; background-color: rgb(16, 48, 98);">
+            <img src="./imagenes/javeriana-logo.png" alt="Pagina web Universidad Javeriana" style="background-color: rgb(16, 48, 98);">
           </a>
         </div>
         <div>
           <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/risk" target="_blank" rel="noopener noreferrer">
-            <img src="./imagenes/risk.png" alt="Pagina web del grupo de investigacion RISK" style="width: 250px;">
+            <img src="./imagenes/risk.png" alt="Pagina web del grupo de investigacion RISK">
           </a>
         </div>
         <div>
           <a href="http://eicg.univalle.edu.co/grupos-area-mecanica-de-solidos/g7" target="_blank" rel="noopener noreferrer">
-            <img src="./imagenes/g7.PNG" alt="Pagina web del grupo de investigacion G7" style="width: 250px;">
+            <img src="./imagenes/g7.PNG" alt="Pagina web del grupo de investigacion G7">
           </a>
         </div>
         <div>
           <a href="http://cidesco.org.co/" target="_blank" rel="noopener noreferrer">
-            <img src="./imagenes/cidesco.png" alt="Logo Cidesco" style="width: 250px;">
+            <img src="./imagenes/cidesco.png" alt="Logo Cidesco">
           </a>
         </div>
         <!--<div>
