--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -36,7 +36,7 @@
         </div>
         <div class="contenedor-ensayos">
           <div class="imagen-ensayo">            
-              <img src="./imagenes/concreto-compresion.jpg" alt="Cilindro de concreto sometido a compresion">
+              <img src="./imagenes/concreto-compresion.png" alt="Cilindro de concreto sometido a compresion">
           </div>
 
           <div class="descripcion-ensayo">
