--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -115,17 +115,18 @@
 
 				<!-- Convertir datos en hoja de cálculo .xlsx -->
 				<script>
-
-					let wb = XLSX.utils.book_new();					
-					wb.SheetNames.push("Test Sheet");					
-					let ws_data = datosExcel;
-					let ws = XLSX.utils.aoa_to_sheet(ws_data, { origin: "A2" });
-					wb.Sheets["Test Sheet"] = ws;
-					XLSX.utils.sheet_add_aoa(ws, [["Carga aplicada (kN)", "Deformación (mm)"]], { origin: "A1" });				 
-					ws["!cols"] = [ { wch: 20 }, { wch: 20 } ];
+					
+					// let wb = XLSX.utils.book_new();					
+					// wb.SheetNames.push("Test Sheet");					
+					// let ws_data = datosExcel;
+					// let ws = XLSX.utils.aoa_to_sheet(ws_data, { origin: "A2" });
+					// wb.Sheets["Test Sheet"] = ws;
+					// XLSX.utils.sheet_add_aoa(ws, [["Carga aplicada (kN)", "Deformación (mm)"]], { origin: "A1" });				 
+					// ws["!cols"] = [ { wch: 20 }, { wch: 20 } ];
 
 					document.getElementById("download-data").onclick = () => { 
-						XLSX.writeFile(wb, "datos_concreto_compresion.xlsx")						
+						datosEnsayo();
+						//XLSX.writeFile(wb, "datos_concreto_compresion.xlsx");						
 					};
 
 				</script>
