--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -89,9 +89,9 @@
   			  <!-- Reporte -->
   			  <div class="card mt-2" style="width: 100%;">
   				  <div class="card-body" style="height: 100%;">								
-  					  <div><script>document.write("Diámetro: " + diametroCilindro.toFixed(2) + " mm" + "\n");</script></div>
-  					  <div><script>document.write("Longitud: " + longitudCilindro.toFixed(2) + " mm" + "\n");</script></div>	
-  					  <div><script>document.write("Carga máxima: " + cargaMaxima + " kN");</script></div>											
+  					  <div><script>diamCil();</script></div>	
+							<div><script>longCil()</script></div>
+							<div><script>maxLoad()</script></div>										
   				  </div>
   			  </div>			
   
