--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
       </div>
     </footer>
 
+    <footer>
+      Universidad del Valle - 
+      Facultad de Ingeniería - 
+      Escuela de Ingeniería Civil y Geomática - 
+      Programa de Ingeniería Civil. 
+      2022 &copy; Todos los derechos reservados.
+    </footer>
+
   </body>
 
 </html>
