--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -91,7 +91,7 @@
   				  <div class="card-body" style="height: 100%;">								
   					  <div><script>diamCil();</script></div>	
 							<div><script>longCil()</script></div>
-							<div><script>maxLoad()</script></div>										
+							<div><script>setTimeout("maxLoad()", 23000)</script></div>										
   				  </div>
   			  </div>			
   
