--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -21,15 +21,16 @@
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
     <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
 
-		<script src="https://r105.threejsfundamentals.org/threejs/resources/threejs/r105/three.min.js"></script>    	
+		<!-- <script src="https://r105.threejsfundamentals.org/threejs/resources/threejs/r105/three.min.js"></script>    	 -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/three-obj-loader@1.1.3/dist/index.min.js"></script>
-		<script async="" src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+		<!-- <script src="https://cdn.jsdelivr.net/npm/three-obj-loader@1.1.3/dist/index.min.js"></script> -->
+		<!-- <script async="" src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script> -->
     <script src="https://cdn.sheetjs.com/xlsx-0.18.10/package/dist/xlsx.full.min.js"></script>
-	  <script src="concreto-compresion.js"></script>
+	  
+		<script src="concreto-compresion.js"></script>
 		
 
 		<style>
@@ -87,7 +88,7 @@
   						  <strong>Resistencia de diseño (MPa)</strong>
   
   						  <input type="number" required value="21" style="text-align: center; display: flex;	justify-content: center;	align-items: center;" min="15" max="125" class="form-control form-control-sm" name="resistenciaNominal"
-  						  id="resistenciaNominal" placeholder="Entre 15 y 125 MPa" form="formulario" title="Resistencia a compresión que debería tener el cilindro de concreto">
+  						  id="resistenciaNominal" placeholder="Entre 15 y 125 MPa" form="formulario" title="Resistencia a compresión que debería tener el cilindro de concreto de acuerdo con las especificaciones de diseño">
   															
   						  <div style="text-align: center; padding: 0.25rem;">		
   							  <button type="button" style="text-align: center;" class="btn btn-primary" 
