--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -21,18 +21,14 @@
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
     <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
 
-		<!-- <script src="https://r105.threejsfundamentals.org/threejs/resources/threejs/r105/three.min.js"></script>    	 -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-		<!-- <script src="https://cdn.jsdelivr.net/npm/three-obj-loader@1.1.3/dist/index.min.js"></script> -->
-		<!-- <script async="" src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script> -->
     <script src="https://cdn.sheetjs.com/xlsx-0.18.10/package/dist/xlsx.full.min.js"></script>
 	  
 		<script src="concreto-compresion.js"></script>
 		
-
 		<style>
 			html,
 			body {
@@ -67,7 +63,7 @@
   
   			<!-- Título del ensayo y manual en pdf -->
   			<div class="col-md-9" style="display: flex;	flex-direction: row; justify-content: space-around;">						
-  				<label style="text-align:center;">Resistencia del concreto a compresión</label>						
+  				<p style="text-align:center;">Resistencia del concreto a compresión</p>						
   				<div>						
   					<a  class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank" href="manual-concreto-compresion.pdf">Manual</a>
   				</div>
@@ -80,7 +76,7 @@
   
   	  <!-- Formulario para ingresar valor de resistencia nominal -->
   	  <div class="card mt-2" style="width: 100%; display: flex;	justify-content: center;	align-items: center;" >
-  		  <div class="card-body" style="text-align: center;" >
+  		  <div class="card-body" style="text-align: center;">
   			  <form class="row g-2" name="formulario" id="formulario">
   				  <div class="col-auto" style="width:250px;">							
   					  <label class="form-label" for="resistenciaNominal" style="font-size:16px;">
@@ -123,10 +119,16 @@
   		 <div class="card-body" style="width: 100%; display: flex; justify-content: center;	align-items: center;">																		
   			 <button type="button" onclick="datosEnsayo()" class="btn btn-success">Descargar datos (.xlsx)</button>						
   		 </div>
-  	 </div>		  
-		  
-  	 				
+  	 </div> 	 				
   
-    </div>		   
+    </div>
+		
+		<!-- Modelo 3d -->
+		<div style="position: absolute; top: 90px; left: 400px; width: 100%; height: 100%;">
+		<p>Aquí va el modelo 3d</p>
+		
+		</div>
+
+
   </body>
 </html>
