--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -56,8 +56,8 @@
 		<div class="position-fixed w-100 p-3 border-bottom" style="z-index: 100000;background-color: #ffffff;">
   		<div class="row">
   			<div class="col-md-3">
-  				<a href="modulo-concreto.html" style="justify-content: space-evenly;" class="d-flex align-items-center text-dark text-decoration-none">
-  					<img src="./imagenes/logo-uv-risk-g7.png" style="height: 30px;">
+  				<a href="modulo-concreto.html" style="justify-content: space-between;" class="d-flex align-items-center text-dark text-decoration-none">
+  					<img src="./imagenes/logo-uv-risk-g7.png" style="height: 45px;">
   						<span class="fs-8" style="text-align: right;">LABORATORIOS VIRTUALES</span>
   				</a>
 				</div>
