--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </main>
 
-    <div style="font-size: 20px; text-align:center; margin-top: 20px;">Un proyecto de:</div>
+    <div style="font-size: 20px; text-align:center; margin-top: 20px;"> <strong>Un proyecto de:</strong> </div>
 
     <footer>
       <div class="footer">
@@ -104,11 +104,30 @@
       </div>
     </footer>
 
-    <footer>
-      Universidad del Valle - 
-      Facultad de Ingeniería - 
-      Escuela de Ingeniería Civil y Geomática - 
-      Programa de Ingeniería Civil. 
+    <footer style="margin-bottom: 25px;">
+      <p style="text-align: center; margin-bottom: 25px; font-size: 20px;"> <strong>Contacto</strong> </p>
+      <div style="padding: 20px; background-color: lightGray; display: flex; flex-direction: row; justify-content: space-evenly;">
+        <div style="text-align: center;">
+          <strong>Albert Ortiz</strong> <br>  
+          Profesor titular <br>     
+          Universidad del Valle <br>   
+          <span style="color: blue;">albert.ortiz@correounivalle.edu.co</span> 
+        </div>
+          
+        <div style="text-align: center;">
+          <strong>Daniel Gómez</strong> <br> 
+          Profesor titular <br> 
+          Universidad del Valle <br> 
+          <span style="color: blue;">daniel.gomez@correounivalle.edu.co</span>  
+        </div>
+      </div>
+    </footer>
+
+    <footer style="text-align: center; margin-top: 50px; color: gray;">
+      Universidad del Valle -   
+      Facultad de Ingeniería -  
+      Escuela de Ingeniería Civil y Geomática -  
+      Programa de Ingeniería Civil <br> 
       2022 &copy; Todos los derechos reservados.
     </footer>
 
