--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -172,7 +172,7 @@
   
         // Cargar escenario
 				const loaderEscenario = new THREE.GLTFLoader();        
-        loaderEscenario.load('escenario.gltf', function(gltf) {        
+        loaderEscenario.load('laboratorio-compresion.gltf', function(gltf) {        
         	scene.add(gltf.scene);       
         }, undefined, function (error) {        
         	console.error(error);        
