--- a/concreto-flexion.html
+++ b/concreto-flexion.html
@@ -288,8 +288,8 @@
 		<div style="position: absolute; top: 90px; left: 400px;">
 			<script>
 				const scene = new THREE.Scene();        
-        // const axesHelper = new THREE.AxesHelper(1);			
-			  // scene.add(axesHelper); 
+        const axesHelper = new THREE.AxesHelper(1);			
+			  scene.add(axesHelper); 
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);      
 			  const renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
@@ -323,9 +323,9 @@
 			  const controls = new THREE.OrbitControls(camera, renderer.domElement);
 				controls.panSpeed = 1;
 				controls.rotateSpeed = 1;				  
-			  camera.position.set(2, 2.5, 0);  
+			  camera.position.set(3, 2.5, -3);  
 			  controls.update();			
-				controls.target = new THREE.Vector3(0, 1.25, 0);		    
+				controls.target = new THREE.Vector3(0, 1.25, -3);				    
 		    renderer.render(scene, camera);	
   
         // Cargar escenario
