--- a/concreto-flexion.html
+++ b/concreto-flexion.html
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 			
-			<!-- Gráfica carga aplicada vs tiempo -->
+			<!-- Gráfica carga aplicada vs deformación -->
 			<div class="card mb-2" style="width: 100%;">
 				<div class="card-body">
 					<canvas id="myChart" style="width: 200px;height: 100px;"></canvas>
