--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -207,7 +207,7 @@
 
 				// Cargar mecanismo de carga de la máquina
         const loaderCargaMaquina = new THREE.GLTFLoader();        
-        loaderCargaMaquina.load('carga-maquina.gltf', function(gltf) {        
+        loaderCargaMaquina.load('compresion-carga.gltf', function(gltf) {        
         	cargaMaquina = gltf.scene;
 					scene.add(cargaMaquina);  
 					    
