--- a/index.html
+++ b/index.html
@@ -94,12 +94,7 @@
           <a href="http://cidesco.org.co/" target="_blank" rel="noopener noreferrer">
             <img src="./imagenes/cidesco.png" alt="Logo Cidesco">
           </a>
-        </div>
-        <!--<div>
-           <a href="hhttps://www.renata.edu.co/" target="_blank" rel="noopener noreferrer">
-            <img src="./imagenes/renata.PNG" alt="Pagina web de red nacional academica de tecnologia avanzada" style="width: 250px;">
-          </a>           
-        </div>-->                     
+        </div>                            
 
       </div>
     </footer>
@@ -109,7 +104,7 @@
       <div style="padding: 20px; background-color: lightGray; display: flex; flex-direction: row; justify-content: space-evenly;">
         <div style="text-align: center;">
           <strong>Albert Ortiz</strong> <br>  
-          Profesor titular <br>     
+          Profesor asociado <br>     
           Universidad del Valle <br>   
           <span style="color: blue;">albert.ortiz@correounivalle.edu.co</span> 
         </div>
@@ -119,6 +114,13 @@
           Profesor titular <br> 
           Universidad del Valle <br> 
           <span style="color: blue;">daniel.gomez@correounivalle.edu.co</span>  
+        </div>
+
+        <div style="text-align: center;">
+          <strong>Sandra Villamizar</strong> <br> 
+          Profesora contratista <br> 
+          Universidad del Valle <br> 
+          <span style="color: blue;">sandra.villamizar@correounivalle.edu.co</span>  
         </div>
       </div>
     </footer>
